2004-05-15 multipath-tools-0.1.8
	* Makefiles cleanup and factorisation
	* Compilation fixes for non-ix86 archs, tested on x86_64
2004-05-10 multipath-tools-0.1.7
	* bugfixes from	Andy <genanr@emsphone.com> :
		* read the last line of the config file
		* add an entry for the 3PARData storage ctlrs
		* read the last char of vendor and model strings
2004-04-25 multipath-tools-0.1.6
	* add the dmadm WIP tool (read MD superblocks and create
	  corresponding devmaps when possible)
	* plug fd leak in TUR path checker
2004-03-25 multipath-tools-0.1.5
	* kpartx to manage the nested bdevs as /dev/cciss/c0d0.
	  parts are named sysfs style : cciss!c0d0p*
	* kpartx loop support
	* kpartx do DM updates if part maps already present
	* merge kpartx for partitioned multipath support
	* add get_null_uid to getuid methods. assign it the "0" index
	  devices with this getuid are thus ignored by multipath.
	  warning : change /etc/multipath.conf (get_evpd_wwid == 1)
	* mv all_scsi_ids out of the 2.6 code path, into the 2.4 one
	* unlink runfile on malloc exit path
	* update multipath manpage (MikeC)
2004-03-17 multipath-tools-0.1.4
	* multipath clean up
		* split default hw table in hwtable.h
		* split grouping policies in pgpolocies.c
		* pass *mp to setup_map instead of mp[]+index
	* ensure defhwtable is used if /etc/multipath.conf is buggy
	* hwtable is not global anymore
	* unlink the runfile in various error paths
2004-03-13 multipath-tools-0.1.3
	* multipath config tool now has a config file parser
	  (did I say I make the ugliest parsers ?)
	* example multipath.conf to put in /etc (manualy)
2004-03-12 multipath-tools-0.1.2
	* detach the per devmap waiter threads
	* set the thread stack size to lower limits
	  (VSZ down to 4MB from 85 MB here)
2004-03-06 multipath-tools-0.1.1
	* include dlist.h in multipath main.c (PM Hahn)
	* typo in hotplug script (PM Hahn)
	* pass -9 opt to gzip for manpages (PM Hahn)
2004-03-05 multipath-tools-0.1.0
	* add the group_by_tur policy